# palefire

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  Start Palefire.cmd  index.html  nightferry.md  package-lock.json  package.json  vite.config.ts
.githooks/: README.md  pre-commit
data/: palefire.db  palefire.json
data/audio/: mqcmfgzd-452105__kyles__wood-creaks-deep-door-or-ship-hul.flac
docs/: design.md  development.md  visuals.md
docs/plans/: player-characters.md  solo-crossing.md
scripts/: cdp.mjs  generate-ambience.mjs  generate-icon.mjs  png.mjs
src/: App.css  App.tsx  files.ts  projectPaths.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_player_characters.sql  003_remove_builtin_audio.sql
src-tauri/solo-migrations/: 001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/audio/: engine.ts
src/components/: AudioLayerCard.tsx  AudioView.tsx  CampaignView.tsx  Confirm.tsx  ImagePicker.tsx  Markdown.tsx  Modal.tsx  ScenesView.tsx  Sidebar.tsx  StoredImage.tsx  TagInput.tsx  cover.ts  icons.tsx  ui.tsx
src/db/: db.ts  repo.ts  seed.ts
src/hooks/: useActivateScene.ts  useAudioLayers.ts
src/lib/: text.ts
src/services/: audioFiles.ts  persistence.ts
src/shell/: NowPlayingDock.tsx  Shell.tsx
src/solo/: anthropic.ts  bible.ts  context.ts  db.ts  prompts.ts  provider.ts  repo.ts  types.ts
src/stores/: appStore.ts  audioStore.ts  dataStore.ts  soloStore.ts
src/views/: Archives.tsx  (+9 more)
